
- Allow singletons to work under Visual C++ when CLR is enabled
  (thanks to Simon Shakeshaft).

- Fixed compilation errors when using STLport (thanks to Marcello
  Pietrobon for the heads-up).

CONFIGURATION

- Added switch to enable OpenMP-based parallelism (thanks to Joseph Wang).
  Currently, this is only used in a few loops in the finite-differences
  and tree frameworks.

DATE/TIME

- Added Diamond Jubilee bank holiday to London calendar.

- Added utilities to parse and format a date with the extended format
  implemented in Boost.Date (thanks to Michael von den Driesch).
  The previous parsing utility was deprecated.

- Added Actual/365 (No Leap) day counter (thanks to Nick Glass).

- Updated most moving holidays for 2014.

INSTRUMENTS

- Fixed Delta and Gamma calculation in Ju quadratic engine (thanks to
  Fabien Le Floc'h).

- Improved calculation in finite-differences Asian options when the
  running average is much greater than the forward value (thanks to
  Klaus Spanderen).

- Fixed Theta issue for some American FDM engines (thanks to Klaus
  Spanderen).

- Fix annuity computation for CMS coupons (thanks to Peter Caspers).

- Enabled case r=0 in Barone-Adesi/Whaley approximation engine (thanks
  to Klaus Spanderen).

- When building a swaption with MakeSwaption, use the fixed tenor of
  the underlying swap index if none is given explicitly.

MODELS

- Allow for calibration of just a subset of a model's parameters.
  Pre-built constraint are provided for calibration of an Hull-White
  model while fixing the mean reversion, and for calibration of a
  Markov functional model while fixing the first component of the
  piecewise volatility. (Thanks to Peter Caspers.)

- Allow recalculation of exercise and end dates in swaption and cap
  helpers when the evaluation date changes (thanks to Peter Caspers).

- Allowed negative strikes in BlackFormula, as long as the strike plus
  the displacement is still positive (thanks to Peter Caspers).
