@@ -76,6 +76,8 @@ namespace QuantLib {
             // June 3rd, 2002 only (Golden Jubilee Bank Holiday)
             // June 4rd, 2002 only (special Spring Bank Holiday)
             || ((d == 3 || d == 4) && m == June && y == 2002)
+            // April 29th, 2011 only (Royal Wedding Bank Holiday)
+            || (d == 29 && m == April && y == 2011)
             // June 4th, 2012 only (Diamond Jubilee Bank Holiday)
             // June 5th, 2012 only (Special Spring Bank Holiday)
             || ((d == 4 || d == 5) && m == June && y == 2012)
@@ -115,6 +117,8 @@ namespace QuantLib {
             // June 3rd, 2002 only (Golden Jubilee Bank Holiday)
             // June 4rd, 2002 only (special Spring Bank Holiday)
             || ((d == 3 || d == 4) && m == June && y == 2002)
+            // April 29th, 2011 only (Royal Wedding Bank Holiday)
+            || (d == 29 && m == April && y == 2011)
             // June 4th, 2012 only (Diamond Jubilee Bank Holiday)
             // June 5th, 2012 only (Special Spring Bank Holiday)
             || ((d == 4 || d == 5) && m == June && y == 2012)
@@ -154,6 +158,8 @@ namespace QuantLib {
             // June 3rd, 2002 only (Golden Jubilee Bank Holiday)
             // June 4rd, 2002 only (special Spring Bank Holiday)
             || ((d == 3 || d == 4) && m == June && y == 2002)
+            // April 29th, 2011 only (Royal Wedding Bank Holiday)
+            || (d == 29 && m == April && y == 2011)
             // June 4th, 2012 only (Diamond Jubilee Bank Holiday)
             // June 5th, 2012 only (Special Spring Bank Holiday)
             || ((d == 4 || d == 5) && m == June && y == 2012)
