@@ -45,7 +45,10 @@ CONFIGURATION
 
 DATE/TIME
 
-- Added Diamond Jubilee bank holiday to London calendar.
+- Added Diamond Jubilee bank holiday to UK calendar.
+
+- Added Royal Wedding bank holiday to UK calendar (thanks to Whit
+  Armstrong for the heads-up).
 
 - Added utilities to parse and format a date with the extended format
   implemented in Boost.Date (thanks to Michael von den Driesch).
